# issue-tracker-2024-rust-backend

./: .gitignore  Cargo.toml  README.md  package.json  template.yaml
database/dynamodb/: issues-table-create.sh  issues-table-schema.json
events/: healthCheck.json  issueDelete.json  issueGet.json  issueInsert.json  issueList.json  issueUpdate.json
src/: database.rs  errors.rs  main.rs  models.rs
