[package]
name = "issue-tracker-aws-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.52.0"
chrono = { version = "0.4.38", features = ["serde"] }
lambda_http = "0.13.0"
log = "0.4.22"
serde = "1.0.214"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
thiserror = "1.0.68"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
